Anpassung in ArtikelstatistikPanel - andere Methode für erste element wird aufgerufen (statt get(0) getFirst())